--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "eslint": "^9.21.0",
     "eslint-plugin-react-hooks": "^5.1.0",
     "eslint-plugin-react-refresh": "^0.4.19",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "globals": "^15.15.0",
     "install": "^0.13.0",
     "tailwindcss": "^4.0.16",
