--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@rive-app/react-canvas": "^4.18.6",
+    "@rive-app/react-canvas-lite": "^4.18.6",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "react": "^19.0.0",
