--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@amplitude/analytics-browser": "^2.13.3",
     "@rive-app/react-canvas": "^4.18.6",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
