--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rive-app/react-canvas": "^4.18.6",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
+    "idb-keyval": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.4.0"
