--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@amplitude/analytics-browser": "^2.13.3",
+    "@rive-app/canvas": "^2.26.9",
     "@rive-app/react-canvas": "^4.18.6",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
