--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@amplitude/analytics-browser": "^2.13.3",
     "@rive-app/canvas": "^2.26.9",
     "@rive-app/react-canvas": "^4.18.6",
+    "@types/canvas-confetti": "^1.9.0",
+    "canvas-confetti": "^1.9.3",
     "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
     "idb-keyval": "^6.2.1",
