--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@amplitude/analytics-browser": "^2.13.3",
     "@rive-app/canvas": "^2.26.9",
     "@rive-app/react-canvas": "^4.18.6",
+    "@supabase/supabase-js": "^2.49.4",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.3",
     "file-saver": "^2.0.5",
