--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@rive-app/react-canvas": "^4.18.6",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.3",
-    "dom-to-image": "^2.6.0",
     "file-saver": "^2.0.5",
+    "html-to-image": "^1.11.13",
     "idb-keyval": "^6.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
