--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@rive-app/canvas": "^2.26.9",
     "@rive-app/react-canvas": "^4.18.6",
     "@supabase/supabase-js": "^2.49.4",
+    "@tanstack/react-query": "^5.74.3",
     "@types/canvas-confetti": "^1.9.0",
     "canvas-confetti": "^1.9.3",
     "file-saver": "^2.0.5",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@eslint/js": "^9.21.0",
     "@tailwindcss/vite": "^4.0.16",
+    "@tanstack/eslint-plugin-query": "^5.73.3",
     "@types/dom-to-image": "^2.6.7",
     "@types/file-saver": "^2.0.7",
     "@types/react": "^19.0.10",
